--- a/challenge_1/styles.css
+++ b/challenge_1/styles.css
@@ -9,6 +9,19 @@ body {
   text-align: center;
 }
 
+#score {
+  border: 1px solid #000000;
+  border-radius: 10px;
+  background-color: #FFFFFF;
+  font-size: 2em;
+  margin: 35px auto;
+  width: 40%;
+}
+
+#score:empty {
+  display: none;
+}
+
 h1 {
   text-align: center;
   font-size: 4em;
