--- a/challenge_1/styles.css
+++ b/challenge_1/styles.css
@@ -25,7 +25,8 @@ body {
 h1 {
   text-align: center;
   font-size: 4em;
-  color: #26593F;
+  color: #73A79B;
+  text-shadow: 1px 1px 2px #000000, 3px 3px 10px #334D3F;
 }
 
 table {
