Refactor to a single page appliccation using jQuery/AJAX

--- a/challenge_2/client/styles.css
+++ b/challenge_2/client/styles.css
@@ -31,3 +31,11 @@ form label:active, form input:active {
   background-color: #66CC94;
   color: #FFFFFF;
 }
+
+#csv {
+  display: none;
+}
+
+#report {
+  white-space: pre;
+}
